# scaler-open-env

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  start_server.py
data/: __init__.py  emails.py
server/: Dockerfile  __init__.py  app.py  email_triage_environment.py  environment.py  standalone_environment.py
tasks/: __init__.py  graders.py
