[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage-env"
version = "1.0.0"
description = "Email Triage environment for OpenEnv — classify, route, and respond to customer emails"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "email_triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["email_triage_env", "email_triage_env.server", "email_triage_env.data", "email_triage_env.tasks"]
package-dir = { "email_triage_env" = ".", "email_triage_env.server" = "server", "email_triage_env.data" = "data", "email_triage_env.tasks" = "tasks" }
